--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,47 @@
-# Ignorar la carpeta bin
-SistemaVentas/bin/
+# Build output
+[Bb]in/
+[Oo]bj/
 
-# Ignorar la carpeta obj
-SistemaVentas/obj/
+# Visual Studio files
+.vs/
+*.user
+*.userosscache
+*.suo
+*.cache
+*.csproj.user
+
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# Windows specific
+[Tt]humbs.db
+*.db
+
+# Build results
+[Dd]ebug/
+[Rr]elease/
+x64/
+x86/
+[Ww][Ii][Nn]32/
+[Aa][Rr][Mm]/
+[Aa][Rr][Mm]64/
+
+# .NET
+*.dll
+*.exe
+*.pdb
+*.cache
+*.log
+project.lock.json
+project.fragment.lock.json
+artifacts/
+
+# NuGet
+packages/
+*.nupkg
+# Ignorar archivos de paquetes excepto packages.config
+!packages.config
